web/ask/err.log
[2016-03-22 09:13:43 +0000] [10284] [INFO] Starting gunicorn 19.4.5
[2016-03-22 09:13:43 +0000] [10284] [INFO] Listening at: http://0.0.0.0:8000 (10284)
[2016-03-22 09:13:43 +0000] [10284] [INFO] Using worker: sync
[2016-03-22 09:13:43 +0000] [10291] [INFO] Booting worker with pid: 10291
[2016-03-22 09:27:54 +0000] [10586] [INFO] Starting gunicorn 19.4.5
[2016-03-22 09:27:54 +0000] [10586] [INFO] Listening at: http://0.0.0.0:8000 (10586)
[2016-03-22 09:27:54 +0000] [10586] [INFO] Using worker: sync
[2016-03-22 09:27:54 +0000] [10626] [INFO] Booting worker with pid: 10626
[2016-03-22 06:29:31 +0000] [10626] [INFO] Parent changed, shutting down: <Worker 10626>
[2016-03-22 06:29:31 +0000] [10626] [INFO] Worker exiting (pid: 10626)
[2016-03-22 09:29:38 +0000] [10640] [INFO] Starting gunicorn 19.4.5
[2016-03-22 09:29:38 +0000] [10640] [INFO] Listening at: http://0.0.0.0:8000 (10640)
[2016-03-22 09:29:38 +0000] [10640] [INFO] Using worker: sync
[2016-03-22 09:29:38 +0000] [10647] [INFO] Booting worker with pid: 10647
2016-03-23 20:31:09 [4000] [INFO] Starting gunicorn 17.5
2016-03-23 20:31:09 [4000] [INFO] Listening at: http://0.0.0.0:8000 (4000)
2016-03-23 20:31:09 [4000] [INFO] Using worker: sync
2016-03-23 20:31:09 [4005] [INFO] Booting worker with pid: 4005
2016-03-23 17:31:12 [4005] [ERROR] Exception in worker process:
Traceback (most recent call last):
  File "/usr/lib/python2.7/dist-packages/gunicorn/arbiter.py", line 473, in spawn_worker
    worker.init_process()
  File "/usr/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 100, in init_process
    self.wsgi = self.app.wsgi()
  File "/usr/lib/python2.7/dist-packages/gunicorn/app/base.py", line 115, in wsgi
    self.callable = self.load()
  File "/usr/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 33, in load
    return util.import_app(self.app_uri)
  File "/usr/lib/python2.7/dist-packages/gunicorn/util.py", line 362, in import_app
    __import__(module)
  File "/home/tayfen/develop/stepic/stepic_web_apps/web/ask/ask/wsgi.py", line 14, in <module>
    application = get_wsgi_application()
  File "/usr/local/lib/python2.7/dist-packages/django/core/wsgi.py", line 13, in get_wsgi_application
    django.setup()
  File "/usr/local/lib/python2.7/dist-packages/django/__init__.py", line 18, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/usr/local/lib/python2.7/dist-packages/django/apps/registry.py", line 108, in populate
    app_config.import_models(all_models)
  File "/usr/local/lib/python2.7/dist-packages/django/apps/config.py", line 202, in import_models
    self.models_module = import_module(models_module_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/tayfen/develop/stepic/stepic_web_apps/web/ask/qa/models.py", line 17
    def get_url(self):
                     ^
IndentationError: unindent does not match any outer indentation level
Traceback (most recent call last):
  File "/usr/lib/python2.7/dist-packages/gunicorn/arbiter.py", line 473, in spawn_worker
    worker.init_process()
  File "/usr/lib/python2.7/dist-packages/gunicorn/workers/base.py", line 100, in init_process
    self.wsgi = self.app.wsgi()
  File "/usr/lib/python2.7/dist-packages/gunicorn/app/base.py", line 115, in wsgi
    self.callable = self.load()
  File "/usr/lib/python2.7/dist-packages/gunicorn/app/wsgiapp.py", line 33, in load
    return util.import_app(self.app_uri)
  File "/usr/lib/python2.7/dist-packages/gunicorn/util.py", line 362, in import_app
    __import__(module)
  File "/home/tayfen/develop/stepic/stepic_web_apps/web/ask/ask/wsgi.py", line 14, in <module>
    application = get_wsgi_application()
  File "/usr/local/lib/python2.7/dist-packages/django/core/wsgi.py", line 13, in get_wsgi_application
    django.setup()
  File "/usr/local/lib/python2.7/dist-packages/django/__init__.py", line 18, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/usr/local/lib/python2.7/dist-packages/django/apps/registry.py", line 108, in populate
    app_config.import_models(all_models)
  File "/usr/local/lib/python2.7/dist-packages/django/apps/config.py", line 202, in import_models
    self.models_module = import_module(models_module_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/tayfen/develop/stepic/stepic_web_apps/web/ask/qa/models.py", line 17
    def get_url(self):
                     ^
IndentationError: unindent does not match any outer indentation level
2016-03-23 17:31:12 [4005] [INFO] Worker exiting (pid: 4005)
2016-03-23 20:31:12 [4000] [INFO] Shutting down: Master
2016-03-23 20:31:12 [4000] [INFO] Reason: Worker failed to boot.
